# kafka-admin-rs

./: Cargo.toml  LICENSE  README.md  docker-compose.kafka.yml
src/: main.rs
